--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:5001",
+  "proxy": "http://localhost:5001/api",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@hexlet/chat-server": "^1.1.8",
+    "axios": "^1.5.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
